force-app/main/default/objects/Transaction__c/fields/Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>Settled_Date__c</fullName>
    <label>Settled Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>