force-app/main/default/objects/Transaction__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>&quot;£&quot; &amp; IF(Cost__c &lt;1,&quot;0&quot;,&quot;&quot;) &amp; TEXT( ROUND( Cost__c ,2) ) &amp; &quot; for &quot; &amp; IF(Units__c &lt;1,&quot;0&quot;,&quot;&quot;) &amp;  TEXT( ROUND(Units__c,2) ) &amp; &quot; units (£&quot; &amp; IF(Unit_Price__c &lt;1,&quot;0&quot;,&quot;&quot;) &amp;  TEXT(ROUND(Unit_Price__c,2)) &amp; &quot;/unit) of &quot; &amp;  Share_Class__r.Name</formula>
    <label>Summary</label>
    <type>Text</type>
</CustomField>