force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Share_Class__c</columns>
    <columns>Settled_Date__c</columns>
    <columns>Units__c</columns>
    <columns>Cost__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>